# xjuliabg

./: CMakeLists.txt  README.md  embed.frag  embed.vert  main.cpp
bin2c/: CMakeLists.txt  bin2c.c
glad/: CMakeLists.txt
glad/include/glad/: glad.h
glad/src/: glad.c
glfw/src/: x11_init.c
